@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.442 2005/10/26 01:42:48 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.443 2005/10/26 03:00:23 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
@@ -15,6 +15,7 @@
   src/GLIArchitectureTemplate.py:
   kernelpkgs.txt support code
   above disabled because it sucks
+  added add_pkg_to_world()
 
   24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
